--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
+    //Retrofit, Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+
     //Anko pengawas ujian chuunin
     def anko_version = '0.10.8'
     implementation "org.jetbrains.anko:anko:$anko_version"
