--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.league.DetailActivity"
+            android:name=".ui.DetailActivity"
             android:label="@string/title_activity_match"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
@@ -26,7 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.DetailAnkoActivity" />
+
         <activity android:name=".ui.MainActivity" />
     </application>
 
