--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.SearchActivity"></activity>
+        <activity android:name=".main.MatchActivity"></activity>
+        <activity android:name=".main.SearchActivity" />
         <activity
             android:name=".main.DetailActivity"
             android:label="@string/title_activity_match"
