--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     testImplementation "android.arch.core:core-testing:1.1.1"
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test:runner:1.2.0'
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.2.1"
+    testImplementation 'org.mockito:mockito-inline:2.27.0'
     // Espresso dependencies
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
