--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:fullBackupContent="@xml/backup_descriptor"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".main.TeamActivity"></activity>
+        <activity android:name=".main.TeamActivity" />
         <activity android:name=".main.MatchActivity" />
         <activity android:name=".main.SearchActivity" />
         <activity
